defined database structure, built models, add aditional documentation

--- a/Echotask/echotask-backend/.env
+++ b/Echotask/echotask-backend/.env
@@ -1,6 +1,12 @@
+# A file that stores environment variables, like secret keys, database URLs, or configuration settings.
+#   -> Environment Variables: These are external values that can be used to configure your app without changing the code. They might include things like database connection strings, API keys, or debug modes.
+
 FLASK_ENV=development
 # Tells Flask to run in dev mode (auto-reload + debugging)
 SECRET_KEY=super_secret_key_for_testing
 # Used by Flask to secure sessions/forms
-DATABASE_URL=sqlite:///instance/echotask.db
+DATABASE_URL=sqlite:///C:/MyProjects/WebAppMVP/echotask/echotask-backend/instance/echotask.db
 # Tells Flask where your SQLite database is stored
+# Syntax break down:
+#   -> "//" to start the "path" part of the URL
+#   -> "/"  relative path (i.e. within the current folder)
